# data-challenge

./: .gitignore  create_bigquery_table.py  data_analysis.ipynb  data_cleaning.py  main.ipynb  pyproject.toml  requirements.txt
data/: cleaned_data.csv  names_info.csv
queries/: a.sql  b.sql  c.sql
